Execution Section Overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -390,6 +390,7 @@ tr {
 .execution .container {
   padding: 4rem 0;
   flex-direction: column;
+  /* margin: 0 0 0 2rem; */
 }
 
 .execution-wrapper {
@@ -422,15 +423,14 @@ tr {
 }
 
 .exe-feature-outter {
-  padding: 2rem 3rem 1rem 0rem;
+  padding: 1rem 1rem 0rem 0rem;
   background-color: var(--light-color);
-  border-radius: 13px;
-  margin-right: -8rem;
+  border-radius: 14px;
   margin-left: 1rem;
 }
 
 .exe-feature-outter img {
-  margin-left: -4rem;
+  margin-left: -3rem;
 }
 
 .exe-content-top-items h3 {
